--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -2,6 +2,7 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Laborationer</title>
         <link rel="stylesheet" type="text/css" href="../css/reset.css" />
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
