--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rasmus site</title>
-        <link rel="stylesheet" type="text/css" href="css/reset.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" type="text/css" media="print" href="css/print.css">
+        <link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/main.css" />
+        <link rel="stylesheet" type="text/css" media="print" href="css/print.css" />
+        <link rel="icon" type="image/png" href="css/pics/res32.png" />
+        <link rel="apple-touch-icon" href="css/pics/res150.png" />
     </head>
     <body>
         <div id="container">
@@ -63,7 +65,7 @@
                 <div class="blog_post">
                     <h2 id="p3">Video-taggen</h2>
                     <p>Testar att envända video-taggen genom att visa en trailer från <a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a></p>
-                    <video width="720" height="400" controls="controls">
+                    <video controls="controls">
                         <source src="http://re222dv.github.io/1ik415-laborationer/videos/bbb.ogg" type="video/ogg">
                     </video>
                     <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
