--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" type="text/css" href="../css/reset.css" />
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
         <link rel="stylesheet" type="text/css" media="print" href="../css/print.css" />
+        <link rel="icon" type="image/png" href="../css/pics/res32.png" />
+        <link rel="apple-touch-icon" href="../css/pics/res150.png" />
     </head>
     <body>
         <div id="container">
