Add html5 elements fix

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" type="text/css" media="print" href="../css/print.css" />
         <link rel="icon" type="image/png" href="../css/pics/res32.png" />
         <link rel="apple-touch-icon" href="../css/pics/res150.png" />
+        <script>
+            "'article aside footer header main nav section time'".replace(/\w+/g,function(n){document.createElement(n)})
+        </script>
     </head>
     <body>
         <div id="container">
