Remove use of hgroup as it is removed from HTML5, use new recomendation

--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -16,10 +16,8 @@
     <body>
         <div id="container">
             <header>
-                <hgroup>
-                    <h1>Presentation</h1>
-                    <h2>Rasmus Enemans site</h2>
-                </hgroup>
+                <h1>Presentation</h1>
+                <p>Rasmus Enemans site</p>
             </header>
         
             <nav id="navigation">
