--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <body>
         <div id="container">
             <header>
-                <hgroup>
-                    <h1>Rasmus Enemans site</h1>
-                    <h2>Välkommen hit!</h2>
-                </hgroup>
+                <h1>Rasmus Enemans site</h1>
+                <p>Välkommen hit!</p>
             </header>
             
             <nav id="navigation">
