--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,10 +16,8 @@
     <body>
         <div id="container">
             <header>
-                <hgroup>
-                    <h1>Kontakt</h1>
-                    <h2>Rasmus Enemans site</h2>
-                </hgroup>
+                <h1>Kontakt</h1>
+                <p>Rasmus Enemans site</p>
             </header>
             
             <nav id="navigation">
