--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -39,142 +39,145 @@
                 </ul>
                 
                 <h2>Resultat</h2>
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>Laboration</th>
-                            <th>Uppgift</th>
-                            <th>Status</th>
-                            <th>Redovisad</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td rowspan="9">1</td>
-                            <td>1</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td>Färdig</td>
-                            <td>2013-09-19</td>
-                        </tr>
-                        <tr>
-                            <td rowspan="8">2</td>
-                            <td>1</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>Färdig</td>
-                            <td>2013-09-26</td>
-                        </tr>
-                        <tr>
-                            <td rowspan="5">3</td>
-                            <td>1</td>
-                            <td>Färdig</td>
-                            <td>2013-10-03</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Färdig</td>
-                            <td>2013-10-03</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Färdig</td>
-                            <td>2013-10-03</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Färdig</td>
-                            <td>2013-10-03</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Färdig</td>
-                            <td>2013-10-03</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>1</td>
-                            <td>Färdig</td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="4">Laborationsresultat gällande Rasmus Eneman</td>
-                        </tr>
-                    </tfoot>
-                </table>
+                <div class="table_container">
+                    <table border="1">
+                        <caption>Tabell över mina laborationer</caption>
+                        <thead>
+                            <tr>
+                                <th>Laboration</th>
+                                <th>Uppgift</th>
+                                <th>Status</th>
+                                <th>Redovisad</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td rowspan="9">1</td>
+                                <td>1</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
+                                <td>Färdig</td>
+                                <td>2013-09-19</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="8">2</td>
+                                <td>1</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>Färdig</td>
+                                <td>2013-09-26</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="5">3</td>
+                                <td>1</td>
+                                <td>Färdig</td>
+                                <td>2013-10-03</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Färdig</td>
+                                <td>2013-10-03</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Färdig</td>
+                                <td>2013-10-03</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Färdig</td>
+                                <td>2013-10-03</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Färdig</td>
+                                <td>2013-10-03</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>1</td>
+                                <td>Färdig</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="4">Laborationsresultat gällande Rasmus Eneman</td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
                 
                 <h2 id="lab-1">Laboration 1</h2>
                 <p>Uppgifter:</p>
@@ -202,7 +205,7 @@
                     <li>Bilder
                         <ul>
                             <li><a href="presentation.html#bird">Presentation, jpeg</a></li>
-                            <li><a href="../pics/res.png">Startsidan, png</a></li>
+                            <li><a href="../css/pics/res150.png">Startsidan, png</a></li>
                             <li><a href="../index.html#p2">Blogginlägg: Laborationssidan, svg</a></li>
                         </ul>
                     </li>
