--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,6 +55,17 @@
                     </fieldset>
                     <input type="submit" name="submit" value="Skicka" />
                 </form>
+                
+                <h3>Kontakta mig på</h3>
+                <section id="hcard-Rasmus-Eneman" class="vcard">
+                    <span class="fn">Rasmus Eneman</span>
+                    &lt;<a class="email" href="mailto:rasmus@eneman.eu">rasmus@eneman.eu</a>&gt;
+                    <section class="adr">
+                        <span class="street-address">Falkenbergsvägen 21A</span><br />
+                        <span class="postal-code">39244</span> 
+                        <span class="locality">Kalmar</span>
+                    </section>
+                </section>
             </main>
             
             <footer>
