post footers should be footer too

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         sapien, eu feugiat eros convallis id. Vivamus quis augue adipiscing nibh adipiscing consequat.
                         Etiam dictum quam vitae diam rhoncus ultrices.
                     </p>
-                    <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
+                    <footer class="post_footer">Skrivet av Rasmus, 2013-09-15</footer>
                 </article>
                 <article class="blog_post">
                     <h2 id="p3">Video-taggen</h2>
@@ -71,22 +71,22 @@
                     <video controls="controls">
                         <source src="http://re222dv.github.io/1ik415-laborationer/videos/bbb.ogg" type="video/ogg">
                     </video>
-                    <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
+                    <footer class="post_footer">Skrivet av Rasmus, 2013-09-15</footer>
                 </article>
                 <article class="blog_post">
                     <h2 id="p2">Laborationssidan, svg</h2>
                     <p>En SVG bild som skapades till uppgiften 1.6</p>
                     <img src="pics/vector.svg" alt="simple vector image" />
-                    <p class="post_footer">Skrivet av Rasmus, 2013-09-15</p>
+                    <footer class="post_footer">Skrivet av Rasmus, 2013-09-15</footer>
                 </article>
                 <article class="blog_post">
                     <h2 id="p1">Hejsan världen!</h2>
                     <p>På denna blogg kommer jag att skriva några rader om de laborationer jag gör och också publicera material som jag producerar.</p>
-                    <p class="post_footer">Skrivet av Rasmus, 2013-09-09</p>
+                    <footer class="post_footer">Skrivet av Rasmus, 2013-09-09</footer>
                 </article>
             </main>
             
-            <footer>
+            <footer id="footer">
                 <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
             </footer>
         </div>
