--- a/pages/contact.html
+++ b/pages/contact.html
@@ -68,7 +68,7 @@
                 </section>
             </main>
             
-            <footer>
+            <footer id="footer">
                 <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
             </footer>
         </div>
