--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -244,7 +244,7 @@
                 </ol>
             </main>
             
-            <footer>
+            <footer id="footer">
                 <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
             </footer>
         </div>
