--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -68,7 +68,7 @@
                 <img src="../pics/bird.jpg" alt="A picture of a bird" />
             </main>
             
-            <footer>
+            <footer id="footer">
                 <p>Ansvarig för materialet på denna sida är Rasmus Eneman</p>
             </footer>
         </div>
