--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,6 +21,7 @@
             </header>
             
             <nav id="navigation">
+                <h1>Meny</h1>
                 <ul>
                     <li><a href="../index.html" id="nav_start">Start</a></li>
                     <li><a href="laborations.html" id="nav_laborations">Laborationer</a></li>
@@ -58,10 +59,10 @@
                 
                 <h3>Kontakta mig på</h3>
                 <section id="hcard-Rasmus-Eneman" class="vcard">
-                    <span class="fn">Rasmus Eneman</span>
+                    <h4 class="fn">Rasmus Eneman</h4>
                     &lt;<a class="email" href="mailto:rasmus@eneman.eu">rasmus@eneman.eu</a>&gt;
                     <section class="adr">
-                        <span class="street-address">Falkenbergsvägen 21A</span><br />
+                        <h4 class="street-address">Falkenbergsvägen 21A</h4><br />
                         <span class="postal-code">39244</span> 
                         <span class="locality">Kalmar</span>
                     </section>
