--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -38,6 +38,7 @@
                         <li><a href="#lab-2">Laboration 2</a></li>
                         <li><a href="#lab-3">Laboration 3</a></li>
                         <li><a href="#lab-4">Laboration 4</a></li>
+                        <li><a href="#lab-5">Laboration 5</a></li>
                     </ul>
                     
                     <h2>Resultat</h2>
@@ -170,6 +171,22 @@
                                     <td>4</td>
                                     <td>1</td>
                                     <td>Färdig</td>
+                                    <td>2013-10-10</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="3">5</td>
+                                    <td>1</td>
+                                    <td>Färdig</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Färdig</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Arbetar</td>
                                     <td></td>
                                 </tr>
                             </tbody>
@@ -243,6 +260,14 @@
                     <p>Uppgifter:</p>
                     <ol>
                         <li>En mobilare portal</li>
+                    </ol>
+                    
+                    <h2 id="lab-5">Laboration 5</h2>
+                    <p>Uppgifter:</p>
+                    <ol>
+                        <li>Sidstruktur</li>
+                        <li>Mikroformat</li>
+                        <li>Fotogalleri</li>
                     </ol>
                 </section>
             </main>
