Add by text on hover

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,15 +8,15 @@
     </head>
     <body>
         <div id="images">
-            <a href="pics/5.jpg" title="En storm i natten"><img src="pics/5.jpg" alt="" /></a>
-            <a href="pics/8.jpg" title="Kaffebönor"><img src="pics/8.jpg" alt="" /></a>
-            <a href="pics/9.jpg" title="En liten fågel"><img src="pics/9.jpg" alt="" /></a>
-            <a href="pics/1.jpg" title="Solnedgång i vinter"><img src="pics/1.jpg" alt="" /></a>
-            <a href="pics/7.jpg" title="Svampar"><img src="pics/7.jpg" alt="" /></a>
-            <a href="pics/3.jpg" title="Blåbär"><img src="pics/3.jpg" alt="" /></a>
-            <a href="pics/6.jpg" title="Fiskare"><img src="pics/6.jpg" alt="" /></a>
-            <a href="pics/4.jpg" title="Halloween"><img src="pics/4.jpg" alt="" /></a>
-            <a href="pics/2.jpg" title="Bergstopp"><img src="pics/2.jpg" alt="" /></a>
+            <a href="pics/5.jpg" title="En storm i natten" data-by="Petr Kratochvil"><img src="pics/5.jpg" alt="" /></a>
+            <a href="pics/8.jpg" title="Kaffebönor" data-by="George Hodan"><img src="pics/8.jpg" alt="" /></a>
+            <a href="pics/9.jpg" title="En liten fågel" data-by="Karen Arnold"><img src="pics/9.jpg" alt="" /></a>
+            <a href="pics/1.jpg" title="Solnedgång i vinter" data-by="Petr Kratochvil"><img src="pics/1.jpg" alt="" /></a>
+            <a href="pics/7.jpg" title="Svampar" data-by="George Hodan"><img src="pics/7.jpg" alt="" /></a>
+            <a href="pics/3.jpg" title="Blåbär" data-by="Petr Kratochvil"><img src="pics/3.jpg" alt="" /></a>
+            <a href="pics/6.jpg" title="Fiskare" data-by="Amateur Pic"><img src="pics/6.jpg" alt="" /></a>
+            <a href="pics/4.jpg" title="Halloween" data-by="Vera Kratochvil"><img src="pics/4.jpg" alt="" /></a>
+            <a href="pics/2.jpg" title="Bergstopp" data-by="Pennie Gibson"><img src="pics/2.jpg" alt="" /></a>
         </div>
     </body>
 </html>
