--- a/gallery/index.html
+++ b/gallery/index.html
@@ -18,5 +18,6 @@
             <a href="pics/4.jpg" title="Halloween" data-by="Vera Kratochvil"><img src="pics/4.jpg" alt="" /></a>
             <a href="pics/2.jpg" title="Bergstopp" data-by="Pennie Gibson"><img src="pics/2.jpg" alt="" /></a>
         </div>
+        <p>By Rasmus Eneman</p>
     </body>
 </html>
