Add link to gallery

--- a/pages/laborations.html
+++ b/pages/laborations.html
@@ -267,7 +267,7 @@
                     <ol>
                         <li>Sidstruktur</li>
                         <li>Mikroformat</li>
-                        <li>Fotogalleri</li>
+                        <li><a href="../gallery/index.html">Fotogalleri</a></li>
                     </ol>
                 </section>
             </main>
